tests/integration/snapshots/integration__conformance__n_string_unicode_capitalu.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
"\UA66D"
stderr ---
error: expected escapable sequence, found `U`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:3
  |
1 | "\UA66D"
  | --^
  | ||
  | |escape slash found here
  | opening quote found here
  |
help: remove unnecessary escape slash
  |
1 - "\UA66D"
1 + "UA66D"
  |
